# Runtime-BNM-Il2Cpp-SDK-Dumper

./: .gitmodules  README.md
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: CppCodeWriter.hpp  Il2Cpp-Headers.hpp  Il2Cpp-Structs.hpp  Il2Cpp.hpp  Utils.hpp  macros.hpp
app/src/main/cpp/include/SDK/: codegen.cpp  codegen.hpp
